# lightspiler

./: .gitignore  LICENSE  README.md  lightspiler.cabal
app/: Main.hs
src/: Lexer.hs  Parser.hs  Tokenizer.hs
