name:                lightspiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/toribaric/lightspiler#readme
license:             MIT
license-file:        LICENSE
author:              toribaric
maintainer:          tomoribar@gmail.com
copyright:           2017 toribaric
category:            Utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser, Lexer, Tokenizer
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lightspiler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MissingH
                     , lightspiler
                     , hlint
  default-language:    Haskell2010

test-suite lightspiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lightspiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/toribaric/lightspiler
